fix: spacing on the playstation upcoming table in watch.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ form {
 .upcoming-info {
     margin-top: 5px;
     margin-left: 5px;
-    margin-right: 5px;
+    margin-right: 2px;
     white-space: nowrap; /*---Sourced as per documented in ReadMe--*/
 }
 
